# Astronaut

./: .gitignore  Cargo.toml  README.md  UNLAUNCH.DSI  link_arm7.x  link_arm9.x  link_bootstrap.x
,vscode/: settings.json
.cargo/: config.toml
LICENSES/: MIT.txt
arm7/: Cargo.toml
arm7/src/: main.rs  mmc.rs  music.rs
arm7/src/music_samples/: kick.raw
arm7_bin/: Cargo.toml
arm7_bin/.cargo/: config.toml
arm7_bin/src/: main.rs  mmc.rs  mmc_new.rs  music.rs  snare.raw  swi.rs
arm7_bootstrap/: Cargo.toml
arm7_bootstrap/.cargo/: config.toml
arm7_bootstrap/src/: main.rs
arm7_bs/: Cargo.toml
arm7_bs/src/: main.rs
arm9/: Cargo.toml  build.rs
arm9/.cargo/: config.toml
arm9/src/: boot.rs  bootloader.rs  font.bin.bak  main.rs  nand.rs  new_takeover.rs
arm9/src/fat/: bs.rs  fs.rs  mod.rs
arm9/src/gui/: backend.rs  frontend.rs
arm9_bin/: Cargo.toml
arm9_bin/.cargo/: config.toml
arm9_bin/src/: autoboot.rs  bootloader.rs  gui.rs  main.rs  mbr.rs  nand.rs  new_takeover.rs  unlaunch.rs
arm9_bin/src/gui/: backend.rs  frontend.rs
arm9_bootstrap/: Cargo.toml
arm9_bootstrap/.cargo/: config.toml
arm9_bootstrap/src/: main.rs
arm9_bs/.cargo/: config.toml
arm9_bs/src/: main.rs
astronaut/: README.md
astronaut/arm7/: Cargo.toml
astronaut/arm7/.cargo/: config.toml
astronaut/arm7/src/: main.rs
astronaut/arm9/: Cargo.toml  build.rs
astronaut/arm9/.cargo/: config.toml
astronaut/arm9/src/: arm7_exploit.rs  bmp.rs  boot.rs  gui.rs  main.rs  mbr.rs  nand.rs  new_takeover.rs
astronaut/arm9/src/configuration/: ini.rs  mod.rs
astronaut/arm9/src/fat/: driver.rs  mod.rs
astronaut/arm9/src/gui/: backend.rs  browser.rs  error.rs  frontend.rs  main_menu.rs  mod.rs  settings.rs  special_thanks.rs
astronaut/arm9/src/music/: mod.rs  module.rs  wav.rs
astronaut/arm9/src/resources/: mod.rs
astronaut/bootstrap/: Cargo.toml
astronaut/bootstrap/.cargo/: config.toml
bs-target/: .rustc_info.json
bs-target/armv4t-none-eabi/release/: arm7_bootstrap  arm7_bootstrap.d
bs-target/armv5te-none-eabi/release/: arm9_bootstrap  arm9_bootstrap.d
bs-target/release/.fingerprint/compiler_builtins-49b768d168329fc1/: build-script-build-script-build  build-script-build-script-build.json
build_tools/: Cargo.toml
build_tools/src/: build_binaries.rs  lib.rs
cargo/: config.toml
cfatfs/: build.rs
cfatfs/fatfs/source/: ff.c  ffconf.h
cfatfs/src/: lib.rs
cfatfs/src/fatfs/: diskio.rs
cfatfs/src/fatfs/diskio/: diskio_bindings.rs
cfatfs/tests/: tests.rs
common/src/: bootstrap.rs  config.rs  lib.rs  music_mod.rs
crates/: README.md
crates/build_tools/: Cargo.toml
crates/build_tools/src/: lib.rs
crates/cfatfs/: Cargo.toml  build.rs
crates/cfatfs/fatfs/source/: diskio.c  ff.c  ff.h  ffconf.h  ffunicode.c
crates/cfatfs/src/: lib.rs
crates/cfatfs/tests/: simulated_driver.rs
crates/common/src/: argv.rs  blowfish.rs  bootstrap.rs  bootstub.rs  config.rs  device_list.rs  lib.rs  modcrypt.rs  patching.rs
crates/hinddoor/bs_arm7/: Cargo.toml
crates/hinddoor/bs_arm9/: Cargo.toml
crates/hinddoor/hd_arm7/: Cargo.toml
crates/hinddoor/hd_arm7/.cargo/: config.toml
crates/hinddoor/hd_arm7/src/: init.rs  main.rs  mmc.rs  music.rs  swi.rs
crates/hinddoor/hd_arm9/: Cargo.toml  build.rs
crates/hinddoor/hd_arm9/.cargo/: config.toml
crates/hinddoor/hd_arm9/src/: autoboot.rs  bmp.rs  boot.rs  gui.rs  main.rs  mbr.rs  nand.rs  new_takeover.rs
crates/hinddoor/hd_arm9/src/configuration/: ini.rs  mod.rs
crates/hinddoor/hd_arm9/src/fat/: driver.rs  fs.rs  mod.rs
crates/hinddoor/hd_arm9/src/gui/: backend.rs  browser.rs  error.rs  frontend.rs  main_menu.rs  settings.rs  special_thanks.rs
crates/installer/arm7/: Cargo.toml
crates/installer/arm7/.cargo/: config.toml
crates/installer/arm7/src/: main.rs
crates/installer/arm9/: Cargo.toml
crates/magic_values/: Cargo.toml
crates/micro_gui/: Cargo.toml
crates/micro_gui/src/: event.rs  response.rs  ui.rs
crates/micro_imgui/: Cargo.toml
crates/micro_imgui/src/: context.rs  lib.rs  primitives.rs  response.rs  ui.rs
crates/micro_imgui_ds/: Cargo.toml
crates/micro_imgui_ds/src/: gui.rs  lib.rs
crates/reboot_lib/: Cargo.toml
crates/reboot_lib/src/: aes.rs  allocator.rs  autoboot_info.rs  dma.rs  fs.rs  ipc.rs  lib.rs  mbk.rs  memory.rs  mmc.rs  ndma.rs  rtc.rs  scfg.rs  sound.rs  swi.rs  timers.rs  twl_wifi.rs  video.rs
crates/reboot_lib/src/i2c/: mod.rs
crates/reboot_lib/src/interupts/: arm7.rs  arm9.rs  mod.rs
crates/reboot_lib/src/mmc/: driver.rs  newer_driver.rs  tmio.rs
crates/reboot_lib/src/music_modules/: impulse_tracker.rs  mod.rs  mods.rs  wav.rs
crates/reboot_lib/src/spi/: firmware.rs  mod.rs  touchscreen.rs  tsc2117.rs
crates/reboot_lib/src/standard_arm7/: init.rs  mod.rs  music.rs  swi.rs
docs/: README.md  colors.md  music.md  themes.md  wallpaper and backgrounds.md
linkerscripts/: link_arm7.x  link_arm7_installer.x  link_arm9.x  link_arm9_installer.x  link_bootstrap.x
magic_values/src/: lib.rs
micro_gui/: Cargo.toml
micro_gui/src/: context.rs  lib.rs  primitives.rs
micro_imgui/src/: context.rs  lib.rs  primitives.rs  response.rs  ui.rs
micro_imgui/src/widgets/: button.rs  label.rs  mod.rs
reboot_cli/: Cargo.toml
reboot_lib/: Cargo.toml
reboot_lib/src/: aes.rs  allocator.rs  crypto.rs  dma.rs  ipc.rs  lib.rs  mbk.rs  memory.rs  mmc.rs  ndma.rs  rtc.rs  scfg.rs  sound.rs  spi.rs  swi.rs  timers.rs  video.rs
reboot_lib/src/i2c/: mod.rs
reboot_lib/src/interupts/: arm7.rs  mod.rs
reboot_lib/src/mmc/: driver.rs  new_driver.rs  newer_driver.rs
reboot_lib/src/music_modules/: mod.rs  mods.rs
reboot_lib/src/spi/: firmware.rs  mod.rs  touchscreen.rs  tsc2117.rs
src/: allocator.rs  build.rs  errors.rs  main.rs  mmc.rs  testing.rs
src/mmc/: aes_ecb.rs  mbr.rs  nandcursor.rs
tools/building/src/: build_binaries.rs  lib.rs
tools/font_converter/: Cargo.toml
tools/font_converter/src/: main.rs
unlaunch_decomp/: Cargo.toml
unlaunch_decomp/src/: launcher_patching.rs  lib.rs  lz77.rs  lz77ds.rs  unlaunch.rs
(+39 files in other folders)
