[package]
name = "reboot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "arm7_bin",
    "arm7_bootstrap",
    "arm9_bin",
    "arm9_bootstrap",
    "common",
    "magic_values",
    "micro_imgui",
    "reboot_lib"
, "unlaunch_decomp"]

[dependencies]
elf = "0.7.4"
#rfd = "0.15.0"
fatfs = {git="https://github.com/rafalh/rust-fatfs.git", rev="c4bb76929eb115f228720631b4110f827b998653"}
sha1 = "0.10.6"
rust-crypto = "0.2.36"
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
tracing = { version = "0.1.41", features = ["log-always"] }
tracing-subscriber = { version = "0.3.19", features = ["time"] }
similar = "2.6.0"
hexify = "0.0.3"
console = "0.15.10"
