[package]
name = "reboot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/hinddoor/hd_arm7",
    "crates/hinddoor/bs_arm7",
    "crates/hinddoor/hd_arm9",
    "crates/hinddoor/bs_arm9",
    "crates/common",
    "crates/magic_values",
    "crates/micro_imgui",
    "crates/reboot_lib"
, "unlaunch_decomp", "crates/cfatfs", "crates/installer/arm9", "crates/installer/arm7", "crates/micro_imgui_ds", "tools/font_converter"]

[dependencies]
common = {path="./crates/common"}
elf = "0.7.4"
#rfd = "0.15.0"
fatfs = {git="https://github.com/rafalh/rust-fatfs.git", rev="c4bb76929eb115f228720631b4110f827b998653"}
sha1 = "0.10.6"
rust-crypto = "0.2.36"
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
tracing = { version = "0.1.41", features = ["log-always"] }
tracing-subscriber = { version = "0.3.19", features = ["time"] }
similar = "2.6.0"
hexify = "0.0.3"
console = "0.15.10"
log = "0.4"
