[package]
name = "reboot_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile-register = "0.2.2"
bitflags = "2.6.0"
linked_list_allocator = {version = "0.10.5", default-features = false}
fatfs = {git="https://github.com/rafalh/rust-fatfs.git", rev="c4bb76929eb115f228720631b4110f827b998653", default-features = false, features = ["lfn", "alloc"]}