[package]
name = "arm9_bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arm9"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
cc = "1"
build_tools = {path = "../../tools/building"}

[dependencies]
reboot_lib = {path = "../../crates/reboot_lib", features = ["arm9i", "standard_arm7"]}
micro_imgui_ds = {path = "../../crates/micro_imgui_ds"}
common = {path = "../../crates/common"}
