[package]
name = "reboot_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile-register = {version = "0.2.2", default-features = false}
bitflags = {version = "2.6.0", default-features = false}
linked_list_allocator = {version = "0.10.5", default-features = false}
common = {path = "../common"}
fatfs-embedded = {git="https://github.com/Vickerinox/fatfs-embedded.git", rev="c32fb98dd07ad1316a89fb336a37eb09bda3f58e", optional = true}
bytemuck = {version = "1.25.0", features = ["must_cast"]}

[features]
fatfs = ["dep:fatfs-embedded"]
default = []
arm7 = []
arm9 = []
arm7i = ["arm7"]
arm9i = ["arm9"]
init_nand_aes = []
standard_arm7 = []