[package]
name = "arm9_bin"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'                             # Optimize for size
lto = true                                  # Enable link-time optimization
codegen-units = 1                           # Reduce number of codegen units to increase optimizations
panic = 'abort'                             # Abort on panic
strip = true                                # Strip symbols from binary*

[profile.dev]
panic='abort'

[[bin]]
name = "DeBoot_arm9"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
cc = "1"
build_tools = {path = "../../build_tools"}

[dependencies]
reboot_lib = {path = "../../reboot_lib", features = ["arm9i", "standard_arm7"]}
micro_imgui_ds = {path = "../../micro_imgui_ds"}
common = {path = "../../common"}
fatfs-embedded ={path = "../../cfatfs", default-features = false}
