[package]
name = "arm7"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'                             # Optimize for size
lto = true                                  # Enable link-time optimization
codegen-units = 1                           # Reduce number of codegen units to increase optimizations
panic = 'abort'                             # Abort on panic
strip = true                                # Strip symbols from binary*

[dependencies]
reboot_lib = {path = "../../reboot_lib"}